# govbot

./: .gitignore  AGENT.md  CLAUDE.md  README-il-witness-slip-poc.md  README.md  README_TESTING.md  SETUP_SECRETS.md  TESTING.md  WITNESS_SLIP.md  docker-compose.yml  govbot.yml  local_test.sh  test_with_email.sh
actions/govbot/: .dockerignore  .gitignore  Cargo.toml  DUCKDB.md  Dockerfile  README.md  REGISTRY.md  TAGGING.md  action.yml  justfile
actions/govbot/data/: registry.json
actions/govbot/examples/: govbot-help.sh  govbot-pull-list.sh  source-basic.sh
actions/govbot/scripts/: install-nightly.sh
actions/govbot/src/: bluesky.rs  cache.rs  config.rs  embeddings.rs  git.rs  lib.rs  lock.rs  main.rs  pipeline.rs  processor.rs  publish.rs  registry.rs  rss.rs  selectors.rs  wizard.rs
actions/govbot/tapes/: govbot-clone-list.tape  govbot-help.tape  govbot-pull-list.tape  logs-basic.tape  source-basic.tape  wizard-all-own-tags.tape  wizard-all-with-tag.tape  wizard-specific-states.tape
actions/govbot/tapes/expected/: govbot-clone-list.txt  govbot-help.txt  logs-basic.txt
actions/govbot/tapes/nightly/: synthetic-test.tape
actions/govbot/tests/: cli_example_snaps.rs  wizard_tests.rs
actions/govbot/tests/snapshots/: cli_example_snaps__snapshot@govbot_help.snap  cli_example_snaps__snapshot@govbot_pull_list.snap  cli_example_snaps__snapshot@source_basic.snap  wizard_tests__wizard_all.snap  wizard_tests__wizard_all_no_tag.snap  wizard_tests__wizard_all_with_tag.snap  wizard_tests__wizard_session_all.snap  wizard_tests__wizard_session_all_own_tags.snap  wizard_tests__wizard_session_all_with_tag.snap  wizard_tests__wizard_session_single_state.snap  wizard_tests__wizard_session_specific.snap  wizard_tests__wizard_session_specific_own_tags.snap  wizard_tests__wizard_session_specific_with_tag.snap  wizard_tests__wizard_single.snap  wizard_tests__wizard_single_with_tag.snap  wizard_tests__wizard_specific.snap  (+1 more)
docs/: book.toml
(+186 files in other folders)
