[package]
name = "govbot"
version = "0.1.0"
edition = "2021"
description = "4-tool civic-data stack: pull real legislative data, filter by what you care about (fastclass tagging), publish with receipts (RSS/HTML/JSON/DuckDB/Bluesky), all from a coding-agent-native dev experience designed to run at nearly-free cost on commodity infrastructure."
authors = ["sartaj"]

[lib]
name = "govbot"
path = "src/lib.rs"

[dependencies]
# Async runtime and streams
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "fs", "macros"] }
futures = "0.3"
async-stream = "0.3"

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# File system operations - jwalk is faster and supports parallel traversal
jwalk = "0.8"
regex = "1.10"

# CLI support for stdio pipeline
clap = { version = "4.5", features = ["derive"] }

# Interactive terminal prompts for setup wizard
dialoguer = "0.11"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Path manipulation
pathdiff = "0.2"

# Git operations
git2 = { version = "0.18" }

# Hashing for text deduplication (.tag.json text hashes)
sha2 = "0.10"
# Timestamps
chrono = { version = "0.4", features = ["serde"] }
# RSS feed generation
rss = "2.0"
# HTTP client for the Bluesky publisher's AT Protocol XRPC calls.
# `ureq` is a small, synchronous, blocking HTTP client — it suits a CLI that
# posts from cron/CI (no async runtime needed on the publish path) and keeps
# the dependency tree light. `native-tls` uses the platform TLS stack
# (Secure Transport / SChannel / OpenSSL) — no extra vendored crypto crate.
ureq = { version = "3", default-features = false, features = ["json", "native-tls", "gzip"] }

[[bin]]
name = "govbot"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"
insta = { version = "1.39", features = ["json"] }
tempfile = "3"

